@@ -69,8 +69,7 @@ public class JListPreference extends PreferenceElement implements PropertyChange
 
     @Override
     protected void initialize(final String value) {
-        // TODO : Java 11 : Swap to isBlank
-        assert (value != null) && !value.trim().isEmpty();
+        assert (value != null) && !value.isBlank();
 
         final JList<?> element = getWeakReference().get();
         if (element != null) {
